--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,10 @@
         <div class="top-bar-section">
           <div class="flex items-center lg:justify-between justify-center">
             <div class="h-[80px]">
-              <a href="#"
+              <a href="home.html"
                 ><img
                   class="h-full"
-                  src="https://i.ibb.co/9ZXj5Yx/b117a066ace15d5b9c39306fa98b4cb3.jpg"
+                  src="gallery/MLC Logo.jpg"
                   alt="Toronto Immigration lawyer"
                   id="logo"
               /></a>
@@ -150,7 +150,7 @@
       <div class="h-[450px] mx-auto w-full">
         <img
           class="w-full h-full object-conver"
-          src="https://t4.ftcdn.net/jpg/06/30/02/39/360_F_630023928_XxF1TXveKuH8rzhedzdb7MJVxvxVZ5Jn.jpg"
+          src="gallery/About Us.jpg"
           alt="blog_img"
         />
       </div>
@@ -165,10 +165,7 @@
             Top Five Things to Look for When Hiring a Lawyer
           </h3>
           <div class="w-full h-hull mt-4">
-            <img
-              src="https://d14ty28lkqz1hw.cloudfront.net/data/org/14410/media/img/source/edit/1511103_edit.jpg"
-              alt="blog img"
-            />
+            <img src="gallery/Criminal-law-vs-civil-law.jpg" alt="blog img" />
           </div>
           <p class="mt-2">
             Issues that require legal action can take a toll on the everyday
@@ -243,11 +240,7 @@
     <div class="container mx-auto mt-[30px] mb-4 px-2">
       <div>
         <div class="w-[350px] h-[350px]">
-          <img
-            class="w-full h-full"
-            src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEyfHx8ZW58MHx8fHx8"
-            alt=""
-          />
+          <img class="w-full h-full" src="gallery/aboust.jpg" alt="" />
         </div>
 
         <p class="mt-3">
@@ -262,6 +255,10 @@
       </div>
 
       <div class="">
+        <div class="mt-3">
+          <img src="gallery/Asylum is a right copy (1).jpg" alt="asylum" />
+        </div>
+
         <h1 class="article-titles" style="text-align: left">
           <a href="#">Announcing The New Website</a>
         </h1>
@@ -276,6 +273,10 @@
         <button class="button-style-new">READ MORE</button>
       </div>
       <div class="mt-10">
+        <div class="mt-3">
+          <img src="gallery/divorce-sign-550.jpg" alt="asylum" />
+        </div>
+
         <h1 class="article-titles" style="text-align: left">
           <a href="#">New Website Under Construction</a>
         </h1>
