--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
         <div class="top-bar-section">
           <div class="flex items-center lg:justify-between justify-center">
             <div class="h-[80px]">
-              <a href="#"
+              <a href="home.html"
                 ><img
                   class="h-full"
-                  src="https://i.ibb.co/9ZXj5Yx/b117a066ace15d5b9c39306fa98b4cb3.jpg"
+                  src="gallery/MLC Logo.jpg"
                   alt="Toronto Immigration lawyer"
                   id="logo"
               /></a>
