--- a/home.html
+++ b/home.html
@@ -18,10 +18,10 @@
         <div class="top-bar-section">
           <div class="flex items-center lg:justify-between justify-center">
             <div class="h-[80px]">
-              <a href="#"
+              <a href="home.html"
                 ><img
                   class="h-full"
-                  src="https://i.ibb.co/9ZXj5Yx/b117a066ace15d5b9c39306fa98b4cb3.jpg"
+                  src="gallery/MLC Logo.jpg"
                   alt="Toronto Immigration lawyer"
                   id="logo"
               /></a>
@@ -322,18 +322,18 @@
         "
       >
         <div class="container mx-auto">
-          <div class="flex flex-wrap items-center justify-center">
-            <div class="w-full md:w-1/2 text-center">
-              <a href="#">
+          <div class="flex flex-wrap gap-3 items-center justify-center">
+            <div class="w-full md:w-[48%] text-center">
+              <div class="aspect-square w-full h-full rounded-lg shadow-lg">
                 <img
-                  src="https://t4.ftcdn.net/jpg/02/95/96/79/360_F_295967926_T2nUnmhQc00dwwp3KsvJSPHMP2xhekry.jpg"
+                  src="gallery/aboust.jpg"
                   alt="Scarborough Notary Public"
-                  class="rounded-lg shadow-lg"
+                  class="rounded-lg shadow-lg w-full h-full"
                 />
-              </a>
+              </div>
             </div>
             <div
-              class="w-full md:w-1/2 text-center md:text-left mb-4 md:mt-0 mt-4 md:mb-0"
+              class="w-full md:w-[48%] text-center md:text-left mb-4 md:mt-0 mt-4 md:mb-0"
             >
               <h2 class="text-5xl text-white mb-3">About Mahbub Ahmed</h2>
               <h2 class="text-3xl text-white">
